Dont set --release flag when --add-exports is used